# app-bloxbot-ai

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  Makefile  PLAN.md  README.md  biome.json  debug-logs.html  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml  ci.yml  release.yml
src/: App.tsx  debug-logs.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/launcher/: package-lock.json  package.json
src-tauri/resources/launcher/src/: launcher.ts
src-tauri/resources/studio-plugin/: BloxBotPlugin.rbxmx  MCPPlugin.rbxmx
src-tauri/src/: config.rs  lib.rs  logging.rs  main.rs  opencode.rs  paths.rs
src/components/: Chat.tsx  ChatInput.tsx  ChatMessages.tsx  ChatSetup.tsx  ChatSidebar.tsx  ConnectionBanner.tsx  DebugLogs.tsx  ErrorBoundary.tsx  LegacyPluginBanner.tsx  LoadingScreen.tsx  OpenCodeProvider.tsx  Settings.tsx  StudioStatus.tsx  UpdateBanner.tsx
src/components/ui/: alert-dialog.tsx  sonner.tsx
src/hooks/: useUpdater.ts
src/lib/: telemetry.ts
src/stores/: opencode.ts
src/types/: index.ts
