[package]
name = "bloxbot"
version = "0.2.0"
description = "AI-assisted Roblox development made easy"
authors = ["BloxBot"]
license = "MIT"
edition = "2021"

[lib]
name = "bloxbot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "time", "macros", "net"] }
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-store = "2.4.2"
dirs = "6"
tauri-plugin-posthog = "0.2.4"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-log = "2.8.0"
log = "0.4.29"

